@@ -1,3 +1,11 @@
+Mon Mar  7 06:04:18 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connector.cpp:
+	* tao/Strategies/SCIOP_Connector.cpp:
+	* tao/Strategies/UIOP_Connector.cpp:
+
+	  Fixed subtle compilation errors from my last checkins.
+
 Mon Mar 07 16:37:25 (IST) 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
         * tao/Resource_Factory.h:
